gccida/g2/reload_cse_simplify_set
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload_cse_simplify_set/src/reload1.c:8678:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class dclass; // [rsp+8h] [rbp-40h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload_cse_simplify_set/src/reload1.c:8685:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v4 = (  struct rtx_def *)set[1]; 
                         ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload_cse_simplify_set/src/reload1.c:8693:31: error: use of undeclared identifier 'machine_mode'
v9 = ix86_memory_move_cost( ( machine_mode)*( ( unsigned __int8 *)v4 + 2), dclass, 1); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload_cse_simplify_set/src/reload1.c:8703:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)v4 + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload_cse_simplify_set/src/reload1.c:8707:28: error: use of undeclared identifier 'machine_mode'
v10 = cselib_lookup( v4, ( machine_mode)*( unsigned __int8 *)( set->fld[0].rtwint + 2), 0); 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload_cse_simplify_set/src/reload1.c:8741:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)loc + 2), 
  ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload_cse_simplify_set/src/obj/reload1.o] Error 1
